[package]
name = "lookup-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'ascii'
path = 'src/ascii.rs'

[[bin]]
name = 'signal'
path = 'src/signal.rs'

[[bin]]
name = 'errno'
path = 'src/errno.rs'

[dependencies]
libc = "0.2.137"
clap = { version = "4.0.18", features = ["derive"] }
box-drawing-table = { git = "https://github.com/algon-320/box-drawing-table" }
